tests/testcases/errors/BCE0129-1.boo
"""
BCE0129-1.boo(6,9): BCE0129: Invalid extension definition, only static methods are allowed.
BCE0129-1.boo(9,9): BCE0129: Invalid extension definition, only static methods are allowed.
"""
class Foo:
	def bar(self as string):
		pass
		
	def constructor(self as string):
		pass
